tests/baselines/reference/internalAliasClassInsideLocalModuleWithExport.errors.txt
internalAliasClassInsideLocalModuleWithExport.ts(1,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
internalAliasClassInsideLocalModuleWithExport.ts(9,8): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
internalAliasClassInsideLocalModuleWithExport.ts(10,12): error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.


==== internalAliasClassInsideLocalModuleWithExport.ts (3 errors) ====
    export module x {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export class c {
            foo(a: number) {
                return a;
            }
        }
    }
    
    export module m2 {
           ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
        export module m3 {
               ~~~~~~
!!! error TS1547: The 'module' keyword is not allowed for namespace declarations. Use the 'namespace' keyword instead.
            export import c = x.c;
            export var cProp = new c();
            var cReturnVal = cProp.foo(10);
        }
    }
    
    export var d = new m2.m3.c();